Mobile fixes for index list directory and profile pages and show overflow on modal

--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -13,3 +13,7 @@ body {
 #overlay {
   z-index: 2;
 }
+
+.js-body-modal-active {
+  overflow: visible;
+}
