--- a/source/_sass/_top-section.scss
+++ b/source/_sass/_top-section.scss
@@ -174,6 +174,7 @@
       }
       @include breakpoint($small-only) {
         font-size: 1rem;
+        width: 100%;
       }
     }
   }
